--- a/package.json
+++ b/package.json
@@ -73,12 +73,13 @@
     "@babel/core": "^7.2.0",
     "@babel/plugin-proposal-class-properties": "^7.2.1",
     "@babel/plugin-proposal-object-rest-spread": "^7.2.0",
+    "@babel/polyfill": "^7.4.4",
     "@babel/preset-env": "^7.2.0",
     "@babel/preset-react": "^7.0.0",
     "@k.sh/eslint-config": "1.11.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.0",
-    "babel-jest": "^23.4.2",
+    "babel-jest": "^24.8.0",
     "babel-plugin-module-resolver": "^3.1.1",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-polyfill": "^6.26.0",
@@ -89,13 +90,13 @@
     "cz-conventional-changelog": "^3.0.0",
     "date-fns": "^1.30.1",
     "husky": "^2.0.0",
-    "jest": "^23.4.2",
+    "jest": "^24.8.0",
     "jest-fetch-mock": "^2.0.1",
     "lint-staged": "^9.0.0",
     "markdownlint-cli": "^0.17.0",
     "npm-check": "^5.9.0",
     "npm-run-all": "^4.1.3",
-    "parcel-bundler": "^1.9.7",
+    "parcel-bundler": "^1.12.3",
     "parcel-plugin-sw-precache": "^1.0.0",
     "pretty-quick": "^1.8.0",
     "prop-types": "^15.6.2",
@@ -115,7 +116,7 @@
     "rollup-plugin-node-resolve": "^4.0.0",
     "rollup-plugin-peer-deps-external": "^2.2.0",
     "rollup-plugin-terser": "^5.0.0",
-    "semantic-release": "^15.12.5",
+    "semantic-release": "^15.13.19",
     "serve": "^11.0.0",
     "sort-package-json": "^1.17.0",
     "tailwindcss": "^0.7.0",
